objects/Customer_Tooling_Landscape__c.object
<CustomObject>
    <description>Customer Success Metrics. Customer Success Managers able to record account metrics related to devOPs that can be reported on.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account that is using a particular ISV vendor.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Tooling Landscapes</relationshipLabel>
        <relationshipName>Customer_Tooling_Landscapes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Customer_of_Provider__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Deselect if customer is no longer using this provider.</inlineHelpText>
        <label>Active Customer of Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Spend__c</fullName>
        <inlineHelpText>A rough value will suffice if a range is given or customer does not want to reveal the exact amount.</inlineHelpText>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Provider_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>CI/CD</fullName>
                </value>
                <value>
                    <fullName>Static Code Analysis</fullName>
                </value>
                <value>
                    <fullName>Data Backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <inlineHelpText>If known, the current contract expiration date of the selected provider.</inlineHelpText>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the related Implementation Survey Response from which this Customer Tooling Landscape record was created from. Survey responses come in from prospects during pre-sales activities via a Smartsheet or GetFeedback form.</description>
        <inlineHelpText>This is the related Implementation Survey Response from which this Customer Tooling Landscape record was created from. Survey responses come in from prospects during pre-sales activities via a Smartsheet or GetFeedback form.</inlineHelpText>
        <label>Implementation Survey Response</label>
        <referenceTo>Implementation_Survey_Response__c</referenceTo>
        <relationshipLabel>Customer Tooling Landscapes</relationshipLabel>
        <relationshipName>Customer_Tooling_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional information or considerations in regards to the customer&apos;s usages of the selected provide .</inlineHelpText>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>A picklist of Providers that a Copado customer might be using.</description>
        <inlineHelpText>Select the provider that the customer is using. If &quot;Other&quot; is selected, please include additional information in the Notes section.</inlineHelpText>
        <label>Provider Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Provider_Names</valueSetName>
        </valueSet>
    </fields>
    <label>Customer Tooling Landscape</label>
    <listViews>
        <fullName>Generic_Listing_Providers</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
        </filters>
        <label>Generic Listing Providers</label>
    </listViews>
    <nameField>
        <displayFormat>CTL-{00000}</displayFormat>
        <label>Customer Tooling Landscape</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Tooling Landscapes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>